// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderLink can render as specific color 1`] = `
<button
  class="euiButtonEmpty euiHeaderLink emotion-euiButtonDisplay-euiButtonEmpty-s-empty-danger"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiHeaderLink is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiHeaderLink testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiTestCss"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiHeaderLink is rendered as active 1`] = `
<button
  class="euiButtonEmpty euiHeaderLink euiHeaderLink-isActive emotion-euiButtonDisplay-euiButtonEmpty-s-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;
